--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.Pomodorotimer" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.Pomodorotimer" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
@@ -9,7 +9,7 @@
         <item name="android:popupBackground">@drawable/background_gradient_card</item>
         <item name="android:dropDownVerticalOffset">48dp</item>
         <item name="android:dropDownSelector">@drawable/background_dim_curved_purple</item>
-        <item name="android:dropDownWidth">wrap_content</item>
+    g    <item name="android:dropDownWidth">wrap_content</item>
         <item name="itemTextColor">@color/white</item>
         <item name="android:textColor">@color/white</item>
     </style>
