--- a/app/src/main/res/drawable/custom_switch_track.xml
+++ b/app/src/main/res/drawable/custom_switch_track.xml
@@ -2,19 +2,15 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_checked="true">
         <shape android:shape="rectangle">
-            <gradient
-                android:startColor="@color/bottom_nav_color2"
-                android:endColor="@color/bottom_nav_color1"
-                android:angle="90" />
+            <solid
+                android:color="@color/task_indicator_color2"/>
             <corners android:radius="20dp" />
         </shape>
     </item>
     <item android:state_checked="false">
         <shape android:shape="rectangle">
-            <gradient
-                android:startColor="@color/bottom_nav_color2"
-                android:endColor="@color/bottom_nav_color1"
-                android:angle="90" />
+            <solid
+                android:color="@color/design_default_color_primary"/>
             <corners android:radius="20dp" />
         </shape>
     </item>
