--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,7 +9,7 @@
         <item name="android:popupBackground">@drawable/background_gradient_card</item>
         <item name="android:dropDownVerticalOffset">48dp</item>
         <item name="android:dropDownSelector">@drawable/background_dim_curved_purple</item>
-    g    <item name="android:dropDownWidth">wrap_content</item>
+        <item name="android:dropDownWidth">wrap_content</item>
         <item name="itemTextColor">@color/white</item>
         <item name="android:textColor">@color/white</item>
     </style>
