feat: auto start pomodoro/breaks : long intervals, bug fixed: auto start pomodoro/breaks

--- a/app/src/main/res/layout/fragment_settings_timer.xml
+++ b/app/src/main/res/layout/fragment_settings_timer.xml
@@ -155,7 +155,6 @@
                         android:gravity="center|start"
                         android:textSize="18sp"/>
 
-
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/pomodoro_count_id"
                         android:layout_width="60dp"
@@ -190,14 +189,25 @@
                         android:textColor="@color/icon_bg1"
                         android:gravity="center|start"/>
 
-                    <androidx.appcompat.widget.SwitchCompat
+                    <com.codersroute.flexiblewidgets.FlexibleSwitch
                         android:id="@+id/auto_start_pomodoro_switch_id"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:thumbTint="@color/cropped_ellipse_color3"
-                        app:trackTint="@color/icon_bg1"
-                        android:thumb="@drawable/custom_switch_thumb"
-                        app:track="@drawable/custom_switch_track"/>
+                        android:layout_width="65dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="center"
+                        app:showText="true"
+                        android:textSize="12sp"
+                        app:backgroundColorOnSwitchOn="@color/task_indicator_color2"
+                        app:backgroundColorOnSwitchOff="@color/icon_bg1"
+                        app:thumbColorOnSwitchOff="#FFFFFF"
+                        app:thumbColorOnSwitchOn="#4A148C"
+                        app:strokeColorOnSwitchOn="@color/cropped_ellipse_color2"
+                        app:strokeColorOnSwitchOff="@color/logout_btn_color"
+                        app:textColorOnSwitchOff="@color/white"
+                        app:textColorOnSwitchOn="@color/white"/>
                 </LinearLayout>
 
                 <!-- Auto start breaks control -->
@@ -218,14 +228,25 @@
                         android:textColor="@color/icon_bg1"
                         android:gravity="center|start"/>
 
-                    <androidx.appcompat.widget.SwitchCompat
+                    <com.codersroute.flexiblewidgets.FlexibleSwitch
                         android:id="@+id/auto_start_breaks_switch_id"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:thumbTint="@color/cropped_ellipse_color3"
-                        app:trackTint="@color/icon_bg1"
-                        android:thumb="@drawable/custom_switch_thumb"
-                        app:track="@drawable/custom_switch_track"/>
+                        android:layout_width="65dp"
+                        android:layout_height="30dp"
+                        android:layout_marginTop="20dp"
+                        android:layout_marginBottom="20dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_gravity="center"
+                        app:showText="true"
+                        android:textSize="12sp"
+                        app:backgroundColorOnSwitchOn="@color/task_indicator_color2"
+                        app:backgroundColorOnSwitchOff="@color/icon_bg1"
+                        app:thumbColorOnSwitchOff="#FFFFFF"
+                        app:thumbColorOnSwitchOn="#4A148C"
+                        app:strokeColorOnSwitchOn="@color/cropped_ellipse_color2"
+                        app:strokeColorOnSwitchOff="@color/logout_btn_color"
+                        app:textColorOnSwitchOff="@color/white"
+                        app:textColorOnSwitchOn="@color/white"/>
                 </LinearLayout>
 
             </LinearLayout>
