--- a/app/src/main/res/layout/fragment_settings_theme.xml
+++ b/app/src/main/res/layout/fragment_settings_theme.xml
@@ -24,7 +24,7 @@
                 android:text="@string/themes_selection_title"
                 android:textSize="26sp"
                 android:textStyle="bold"
-                android:textColor="@color/white"
+                android:textColor="?attr/baseTextColor"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
